package org.example.f_adapter.objectadapter;

//适配接口
public interface IVoltage5V {
    int output5V();
}
